<resources>
    <string name="app_name">学川教育</string>
    <string name="app_content_heat">http://192.168.1.111:8080</string>
    <string name="http_video_setting">/polyvideosettings/android.json</string>
    <string name="http_url_weixin">/api/authv2/login</string>
    <string name="http_url_text">/api/test/post</string>
    <string name="http_token">/api/Service/Refresh</string>
    <string name="http_code">/api/SecurityCode/Send</string>
    <string name="http_register">/api/user/userpost</string>
    <string name="http_login">/api/userv2/login</string>
    <string name="http_getHot">/api/search/gethot</string>
    <string name="http_getHotkey">/api/search/getsearchkey</string>
    <string name="http_infom">/api/advisory/get</string>
    <string name="http_WenZhan">/api/article/get</string>
    <string name="http_HomePage">/api/homepage/get</string>
    <string name="http_refresh_token">/api/Service/Refresh</string>
    <string name="http_comment">/api/comment/post</string>
    <string name="http_laud">/api/support/post</string>
    <string name="http_favpost">/api/question/favpost</string>
    <string name="http_getarticlelistbytag">/api/Article/getarticlelistbytag</string>
    <string name="http_getarticletag">/api/Article/getarticletag</string>
    <string name="http_getresult">/api/search/getresult</string>
    <string name="http_questionhispost">/api/question/questionhispost</string>
    <string name="http_chapter">/api/standard/getchapter</string>
    <string name="http_article">/api/standard/getarticle</string>
    <string name="http_Course">/api/TextBook/GetCourse</string>
    <string name="http_jiaocaichapter">/api/textbook/getchapter</string>
    <string name="http_coursequestionids">/api/question/getcoursequestionids</string>
    <string name="http_errsetandfav">/api/question/geterrsetandfav</string>
    <string name="http_chapterquestionids">/api/question/getchapterquestionids</string>
    <string name="http_questiontags">/api/question/getquestiontags</string>
    <string name="http_questiontagscount">/api/question/getquestiontagscount</string>
    <string name="http_questiontagids">/api/question/getquestiontagids</string>
    <string name="http_articlecomment">/api/article/getarticlecomment</string>
    <string name="http_homecommentcomment">/api/article/getcommentcomment</string>
    <string name="http_datail">/api/question/getdetail</string>
    <string name="http_questioncmment">/api/question/getquestioncomment</string>
    <string name="http_getdetail">/api/article/getdetail</string>
    <string name="http_commentcomment">/api/question/getcommentcomment</string>
    <string name="http_isbought">/api/question/getisbought</string>
    <string name="http_questionidsbytagid">/api/question/getquestionidsbytagid</string>
    <string name="http_examchapter">/api/question/getexamchapter </string>
    <string name="http_getCnapter">/api/question/getchapter</string>
    <string name="http_questionremoveerrsetpost">/api/question/questionremoveerrsetpost</string>
    <string name="http_questionbankproduct">/api/question/getquestionbankproduct</string>
    <string name="http_getclassandproducts">/api/video/getclass</string>
    <string name="http_getproductdetail">/api/video/getproductdetail</string>
    <string name="http_playprogresspost">/api/video/playprogresspost</string>
    <string name="http_videodownloadpost">/api/video/videodownloadpost</string>
    <string name="http_getproduct">/api/video/getproduct</string>
    <string name="http_getVideo_evalue">/api/video/getvideocomment</string>
    <string name="http_getvideocommentcomment">/api/video/getcommentcomment</string>
    <string name="http_exchangepost">/api/exchangecode/exchangepost</string>
    <string name="http_get_sncode">/api/sncode/get</string>
    <string name="http_post_advice">/api/advice/post</string>
    <string name="http_get_order">/api/order/get</string>
    <string name="http_m_infom">/api/user/getmemberinfo</string>
    <string name="http_m_hear">/api/user/changeheadimg</string>
    <string name="http_m_submitInfom">/api/user/changememberinfo</string>
    <string name="http_m_markorder">/api/order/markorder</string>
    <string name="http_m_membernotification">/api/membernotification/get</string>
    <string name="http_my_msg">/api/membernotification/get</string>
    <string name="http_bindwechat">/api/user/bindwechat</string>
    <string name="http_out_login">/api/user/logout</string>
    <string name="http_system_msg">/api/systemnotification/get</string>
    <string name="http_deletenotify">/api/membernotification/deletenotify</string>
    <string name="http_delsystem">/api/systemnotification/deletenotify</string>
    <string name="http_changerpwd">/api/user/userchangepwdpost</string>
    <string name="http_makeorderpost">/api/order/makeorderpost</string>
    <string name="http_pay">/api/pay/post</string>
    <string name="http_upApp">/apks/appversion.json</string>
    <string name="http_youzan_hear">https://trade.youzan.com/trade/order/result?</string>
    <string name="http_youzan_tipu">kdt_id=948752</string>
    <string name="http_youzan_key">order_no</string>
    <string name="http_boli_updata">/api/errlog/post</string>
    <string name="http_setting">/configs/appsettings_android.json</string>
    <string name="http_getchapter">/api/questionv2/getchapter</string>
    <string name="http_getquestiontags">/api/questionv2/getquestiontags</string>
    <string name="http_GetCourseQuestionIds">/api/questionv2/getcoursequestionids</string>
    <string name="http_GetQuestionTagsCount">/api/questionv2/getquestiontagscount</string>
    <string name="http_GetQuestionTagIds">/api/questionv2/getquestiontagids</string>
    <string name="http_GetDetail">/api/questionv2/getdetail</string>
    <string name="http_questionshispost">/api/questionv2/questionhispost</string>
    <string name="http_loging_scan">/api/qr/scanpost</string>
    <string name="http_loging_scanconfirmpost">/api/qr/scanconfirmpost</string>
    <string name="http_currency_comment">/api/comment/getcomment</string>
    <string name="http_currency_comment_comment">/api/comment/getcommentcomment</string>
    <string name="http_video2getclass">/api/videov2/getclass</string>
    <string name="http_allAddress">/api/memberaddress/getaddress</string>
    <string name="http_create_address">/api/memberaddress/createorupdatepost</string>
    <string name="http_setdefaultaddresspost">/api/memberaddress/setdefaultaddresspost</string>
    <string name="http_deleteaddresspost">/api/memberaddress/deleteaddresspost</string>
    <string name="http_changerifon">/api/exchangecode/getexchangeinfo</string>
    <string name="http_makeVideoorderpost">/api/orderv2/makeorderpost </string>
    <string name="http_getVideov3productdetail">/api/videov3/getproductdetail</string>
    <string name="http_getdefaultaddress">/api/memberaddress/getdefaultaddress</string>
    <string name="http_getOrderdetail">/api/orderv3/getorderdetail</string>
    <string name="http_confirmaddress">/api/orderv3/confirmaddress</string>
    <string name="http_getYzOrdertrace">/api/logistics/getyzordertraces</string>
    <string name="http_get_v2order">/api/orderv3/get</string>
    <string name="http_getordertraces">/api/logistics/getordertraces </string>
    <string name="http_confirmreceive">/api/orderv2/confirmreceive </string>
    <string name="http_refund_get">/api/refund/get </string>
    <string name="http_m_v2markorder">/api/orderv2/markorder</string>
    <string name="http_oder_weixin_youzan">https://h5.youzan.com/v2/orders/all?kdt_id=948752</string>
    <string name="httP_order_waitaddressorder">/api/orderv3/getwaitaddressorder </string>
    <string name="http_order_wait_confirmaddress">/api/orderv2/confirmaddress</string>
    <string name="http_playprogresspostv2">/api/videov2/playprogresspost</string>
    <string name="http_app_home_get">/api/v2/homepage/get</string>
    <string name="http_app_home_getresult">/api/v2/search/getresult</string>
    <string name="http_app_home_getproductlist">/api/v2/product/getproductlist</string>
    <string name="http_app_home_getproductdetail">/api/v2/product/getproductdetail</string>
    <string name="http_app_home_getproductdetailcomment">/api/v2/product/getproductcomment</string>
    <string name="http_app_net_myclass">/api/v2/user/getmyclass</string>
    <string name="http_app_bank_getupgrade">/api/v2/question/getupgrade</string>
    <string name="http_app_bank_file_down">/1.4.zip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_search_history">历史记录</string>
    <string name="host_nominate">热门推荐</string>
    <string name="login">登录</string>
    <string name="login_title">登录学川</string>
    <string name="regist_phone">手机注册</string>
    <string name="regist">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password1">忘记密码?</string>
    <string name="please_paw">请输入密码</string>
    <string name="please_new_paw">请输入新密码</string>
    <string name="get_code">获取验证码中..</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_pass">请输入用户密码</string>
    <string name="login_loading">登录中...</string>
    <string name="registerOK">注册成功</string>
    <string name="phone1">请输入手机号码</string>
    <string name="phone">手机号码</string>
    <string name="phone2">联系电话</string>
    <string name="phone_m">手机号</string>
    <string name="user_password">账户密码</string>
    <string name="user_password1">请输入密码</string>
    <string name="or">或</string>
    <string name="code">验证码</string>
    <string name="sure_password">确认密码</string>
    <string name="sure_new_password">确认新密码</string>
    <string name="bingphone">绑定手机号</string>
    <string name="reset_password">重置密码</string>
    <string name="loading">加载中...</string>
    <string name="passundersixt">密码不能低于6位</string>
    <string name="please_login">用户登录过期，请登录</string>
    <string name="please_register">用户还未注册,请注册</string>
    <string name="sms_ok">验证码发送成功</string>
    <string name="sms_ok_repeat">一分钟内同一个手机号不能重新发送</string>
    <string name="sms_fail">短信发送失败</string>
    <string name="phone_register">该手机号已注册</string>
    <string name="location">定位</string>
    <string name="home_teacherMateri">教材</string>
    <string name="home_specs">规范</string>
    <string name="home_infom">推荐资讯</string>
    <string name="home_infom_all">推荐文章</string>
    <string name="please_right_phone">请输入正确的手机号码</string>
    <string name="number">数量</string>
    <string name="twentyquestion">20道</string>
    <string name="fiftyquestion">50道</string>
    <string name="hundredquestion">100道</string>
    <string name="difficulty">难度</string>
    <string name="easy">容易</string>
    <string name="medium">中等</string>
    <string name="hard">困难</string>
    <string name="your_opinion">您的意见</string>
    <string name="practice_mode">联系方式</string>
    <string name="phoneorweixin">手机/微信</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="save">保存</string>
    <string name="changerrpaw">修改密码</string>
    <string name="rawpaw">原密码</string>
    <string name="newpaw">新密码</string>
    <string name="old_paw">请输入旧密码</string>
    <string name="camera">拍照</string>
    <string name="phoneal">相册</string>
    <string name="scope">范围</string>
    <string name="create_volume">生成试卷</string>
    <string name="please_updata_type">请选择图片上传方式</string>
    <string name="add_fack">描述您在APP使用中遇到的问题或建议</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="edit_detail_address">请输入详细地址</string>
    <string name="street_address">街道地址</string>
    <string name="please_province">请选择省市区</string>
    <string name="province">省市区</string>
    <string name="addres_name">收件人姓名</string>
    <string name="addressee">收件人</string>
    <string name="postalcode">邮政编码</string>
</resources>