<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/space_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_updata_type"
        android:textColor="@color/text_fu_color"
        android:textSize="@dimen/text_size_12" />

    <LinearLayout
        android:layout_marginTop="@dimen/space_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/m_modify_camera"
            android:layout_weight="1"
            android:id="@+id/btn_open_came"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <Button
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/m_modify_photoal"
            android:layout_weight="1"
            android:id="@+id/btn_open_alum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneal" />
    </LinearLayout>


</LinearLayout>